add auth router
